Adds cities routes to open API docs
